forgot to save file

--- a/backend/openai_test.ipynb
+++ b/backend/openai_test.ipynb
@@ -2,28 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sk-proj-tp1X2EP4mYCO1kzjbLMIT3BlbkFJYlMyW7M0Tewy2mjpHsi9\n"
-     ]
-    }
-   ],
-   "source": [
-    "from dotenv import load_dotenv\n",
-    "import os\n",
-    "\n",
-    "load_dotenv()\n",
-    "api_key = os.getenv('OPENAI_API_KEY')\n",
-    "print(api_key)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -37,7 +15,7 @@
    ],
    "source": [
     "from openai import OpenAI\n",
-    "client = OpenAI() # imports the API key from the OPENAI_API_KEY environment variable by default\n",
+    "client = OpenAI() # defaults to getting the key using os.environ.get(\"OPENAI_API_KEY\")\n",
     "\n",
     "completion = client.chat.completions.create(\n",
     "  model=\"gpt-4o-mini\",\n",
@@ -49,6 +27,13 @@
     "\n",
     "print(completion.choices[0].message)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
