start setting up backend api

--- a/backend/openai_test.ipynb
+++ b/backend/openai_test.ipynb
@@ -33,7 +33,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Every gameplay session starts a new chat session\n",
+    "\n",
+    "# Agent 1 base prompt:\n",
+    "'''\n",
+    "You are a storyteller.\n",
+    "The dialogue should always be output in this format, example:\n",
+    "LoverA: \"I still lo\"\n",
+    "LoverB: \"\"\n",
+    "'''\n",
+    "# Agent 2 base prompt\n",
+    "'''\n",
+    "You analyze the outut\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "# Flask API endpoints:\n",
+    "    # /positiveStory\n",
+    "        # \n",
+    "    # /negativeStory\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
