setting up flask endpoints

--- a/backend/openai_test.ipynb
+++ b/backend/openai_test.ipynb
@@ -30,31 +30,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Every gameplay session starts a new chat session\n",
     "\n",
     "# Agent 1 base prompt:\n",
     "'''\n",
-    "You are a storyteller.\n",
-    "The dialogue should always be output in this format, example:\n",
-    "LoverA: \"I still lo\"\n",
-    "LoverB: \"\"\n",
-    "'''\n",
-    "# Agent 2 base prompt\n",
-    "'''\n",
-    "You analyze the outut\n",
-    "'''\n",
+    "You are a storyteller telling a story about two lovers in the form of a back-and-forth dialogue where a character named Romeo is \n",
+    "is trying to convince another character named Juliet to get back together. By the end of the dialogue, the characters should come to a decision \n",
+    "that they [do / do not] get back together. Throughout the dialogue, LoverB wavers between getting back together and breaking up.\n",
     "\n",
+    "Throughout this conversation, you will be prompted to forward the story either positively or negatively. With each prompt, forward the story as instructed in the form of \n",
+    "two lines of dialogue between Romeo and Juliet. And then analyze the tone of the \"juliet_dialogue\" and provide \n",
+    "a color hex code that represents the tone of the dialogue. Try to use a wide spectrum of colors and to not repeat colors.\n",
+    "\n",
+    "Your response should be formatted as a JSON body as follows:\n",
+    "{\n",
+    "    \"romeo_dialogue\": \"Please, just give me a chance. I’ve been thinking a lot, and I really want to explain myself.\",\n",
+    "    \"juliet_dialogue\": \"Explain what, exactly? You hurt me, and it’s not something I can just forget.\",\n",
+    "    \"color_hex_code\": \"#FF0000\"\n",
+    "}\n",
+    "'''\n",
     "\n",
     "# Flask API endpoints:\n",
-    "    # /positiveStory\n",
-    "        # \n",
-    "    # /negativeStory\n",
+    "# /positiveStory [POST]\n",
+    "'''\n",
+    "Prompt:\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Response: {romeo_dialogue, juliet_dialogue, color_hex_code}\n",
+    "\n",
+    "\n",
+    "# /negativeStory [POST]\n",
+    "'''\n",
+    "Prompt:\n",
+    "\n",
+    "'''\n",
+    "# Response: {romeo_dialogue, juliet_dialogue, color_hex_code}\n",
+    "\n",
+    "\n",
+    "# /endStory [POST]\n",
+    "\n",
+    "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
