push latest changes with session handling update

--- a/backend/openai_test.ipynb
+++ b/backend/openai_test.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ChatCompletionMessage(content=\"In the realm of code where logic reigns bright,  \\nA tale unfolds, in the soft, glowing light.  \\nRecursion, dear friend, is a curious dance,  \\nA function that calls, in a mystical trance.  \\n\\nImagine a mirror, reflecting your face,  \\nWith layers of images, each one in its place.  \\nSo goes our function, a call to its core,  \\nIt peeks through the lens, then opens a door.  \\n\\n“Dear self,” it whispers, “let’s split this in two,  \\nFor within this conundrum, there's work left to do.  \\nTo solve the grand puzzle, let’s break it apart,  \\nFor each little piece plays its own vital part.”  \\n\\nBase case, a beacon, a guiding bright star,  \\nIt tells us, “Stop here, you’ve ventured too far.”  \\nWithout this foundation, we’d spiral away,  \\nIn an infinite loop, where we’d lose our way.  \\n\\nSo we call on our self, with a new little chore,  \\nEach step like a petal, unveiling the lore.  \\nWith each function’s whisper, the problem unwinds,  \\nFinding solutions, where logic entwines.  \\n\\nTo calculate factorial, or traverse a tree,  \\nRecursion’s the key to make sense of the spree.  \\nWe dive into depths, oh what treasures await,  \\nIn structured reflection, we unravel our fate.  \\n\\nSo dance with recursion, let your logic take flight,  \\nIn the heart of your code, there’s a wondrous delight.  \\nWith elegance woven through each layered embrace,  \\nIn the world of programming, recursion finds grace.  \", role='assistant', function_call=None, tool_calls=None)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from openai import OpenAI\n",
     "client = OpenAI() # defaults to getting the key using os.environ.get(\"OPENAI_API_KEY\")\n",
@@ -30,20 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Every gameplay session starts a new chat session\n",
     "\n",
@@ -93,10 +74,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "API token is working. Received a successful response.\n",
+      "Response content:\n",
+      "{\n",
+      "  \"dialogue_response\": \"{\\n    \\\"romeo_dialogue\\\": \\\"Juliet, I know I made a mistake, but I am willing to do whatever it takes to make things right.\\\",\\n    \\\"juliet_dialogue\\\": \\\"Romeo, it's not that simple. I don't know if I can trust you again.\\\",\\n    \\\"color_hex_code\\\": \\\"#FF5733\\\"\\n}\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test /positiveStory endpoint\n",
+    "\n",
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "url =  'http://127.0.0.1:5000/positiveStory'\n",
+    "\n",
+    "payload = {\"session_id\": 2}\n",
+    "\n",
+    "headers = {\n",
+    "    'Content-Type': 'application/json'\n",
+    "}\n",
+    "\n",
+    "response = requests.post(url, data=json.dumps(payload), headers=headers)\n",
+    "\n",
+    "# Check the response\n",
+    "if response.status_code == 200:\n",
+    "    print(\"API token is working. Received a successful response.\")\n",
+    "    print(\"Response content:\")\n",
+    "    print(json.dumps(response.json(), indent=2))\n",
+    "else:\n",
+    "    print(f\"Error: Received status code {response.status_code}\")\n",
+    "    print(\"Response content:\")\n",
+    "    print(response.text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "{'dialogue_response': '{\\n    \"romeo_dialogue\": \"Juliet, I know I made a mistake, but I am willing to do whatever it takes to make things right.\",\\n    \"juliet_dialogue\": \"Romeo, it\\'s not that simple. I don\\'t know if I can trust you again.\",\\n    \"color_hex_code\": \"#5733FF\"\\n}'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test the /negativeStory endpoint\n",
+    "\n",
+    "url =  'http://127.0.0.1:5000/negativeStory'\n",
+    "\n",
+    "payload = {\"session_id\": 2}\n",
+    "\n",
+    "headers = {\n",
+    "    'Content-Type': 'application/json'\n",
+    "}\n",
+    "\n",
+    "response = requests.post(url, data=json.dumps(payload), headers=headers)\n",
+    "\n",
+    "print(response.status_code)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "{'dialogue_response': '{\\n    \"romeo_dialogue\": \"Juliet, I know I made a mistake, but I am willing to do whatever it takes to make things right.\",\\n    \"juliet_dialogue\": \"Romeo, I believe in second chances. Let\\'s work through this together.\",\\n    \"color_hex_code\": \"#33FF57\"\\n}'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test /positiveStory endpoint\n",
+    "\n",
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "url =  'http://127.0.0.1:5000/positiveStory'\n",
+    "\n",
+    "payload = {\"session_id\": 2}\n",
+    "\n",
+    "headers = {\n",
+    "    'Content-Type': 'application/json'\n",
+    "}\n",
+    "\n",
+    "response = requests.post(url, data=json.dumps(payload), headers=headers)\n",
+    "\n",
+    "print(response.status_code)\n",
+    "print(response.json())\n"
+   ]
   }
  ],
  "metadata": {
